Better wercker step desc

--- a/wercker-step.yml
+++ b/wercker-step.yml
@@ -1,6 +1,10 @@
 name: mfs-upload
 version: 0.1.2
-description: Uploads a file to fs-php.
+description: |
+  A wercker.com step to upload a file via HTTP PUT to an endpoint. This is intended
+  to be used with [fs-php](http://github.com/zeisss/fs-php), but probably works
+  with other HTTP services too - it's just a PUT.
+
 keywords:
   - http
   - upload
